mastodon/apps/es-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: es
  name: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.name
              value: es-mastodon
            - name: discovery.type
              value: single-node
          image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.10
          livenessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
              scheme: HTTP
          name: es
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: es-claim0
      restartPolicy: Always
      volumes:
        - name: es-claim0
          persistentVolumeClaim:
            claimName: es-claim0
