mastodon/apps/sidekiq-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sidekiq
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - args:
            - bundle
            - exec
            - sidekiq
          image: tootsuite/mastodon:v3.4.6
          name: sidekiq
          resources: {}
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: web-claim0
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
status: {}
