mastodon/apps/streaming-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: streaming
  name: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - args:
            - node
            - ./streaming
          image: tootsuite/mastodon:v3.4.6
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: 4000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: 4000
              scheme: HTTP
          name: streaming
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
status: {}
