mastodon/apps/es-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: es
  name: es
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    app: es
