mastodon/apps/streaming-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streaming
  name: streaming
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
      nodePort: 32100
  type: NodePort
  selector:
    app: streaming
