mastodon/apps/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
    - name: web
      port: 3000
  selector:
    app: web
