mastodon/apps/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: mastodon
  name: mastodon
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`your-domain.example.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
